# vocal-pitch-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: NoteRange.h  PianoKeyboard.cpp  PianoKeyboard.h  PitchGraph.cpp  PitchGraph.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  YinPitchDetector.cpp  YinPitchDetector.h
